--- a/UniVerse/app/src/main/res/values/strings.xml
+++ b/UniVerse/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="notifications">Notifications</string>
+    <string name="settings">Settings</string>
+    <string name="home">Home</string>
+    <string name="schedule">Schedule</string>
+
 </resources>
