--- a/UniVerse/app/src/main/res/values/strings.xml
+++ b/UniVerse/app/src/main/res/values/strings.xml
@@ -9,15 +9,20 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="notifications">Notifications</string>
+    <string name="settings">Settings</string>
+    <string name="home">Home</string>
+    <string name="schedule">Schedule</string>
+    
     <string name="register_button">Need an account?</string>
-
+    
     <!-- Strings related to navbar -->
     <string name="title_activity_feed">Feed</string>
     <string name="title_feed">Feed</string>
     <string name="title_schedule">Schedule</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_settings">Settings</string>
-
+    
     <!-- Strings for major selection drop down -->
     <string-array name="gradArray">
         <item>Choose a major...</item>
