Major selection and graduation year formatting

--- a/UniVerse/app/src/main/res/values/strings.xml
+++ b/UniVerse/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
@@ -17,5 +17,18 @@
     <string name="title_schedule">Schedule</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_settings">Settings</string>
+
+    <!-- Strings for major selection drop down -->
+    <string-array name="gradArray">
+        <item>Choose a major...</item>
+        <item>Comp. Science</item>
+        <item>Civil Engineering</item>
+        <item>Art</item>
+        <item>Design</item>
+        <item>History</item>
+        <item>English</item>
+        <item>Philosophy</item>
+        <item>Other</item>
+    </string-array>
 
 </resources>
