--- a/UniVerse/app/src/main/res/values/strings.xml
+++ b/UniVerse/app/src/main/res/values/strings.xml
@@ -11,8 +11,11 @@
     <string name="login_failed">"Login failed"</string>
     <string name="notifications">Notifications</string>
     <string name="settings">Settings</string>
-    <string name="home">Home</string>
+    <string name="feed">Feed</string>
     <string name="schedule">Schedule</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    
     
     <string name="register_button">Need an account?</string>
     
