--- a/UniVerse/app/src/main/res/values/strings.xml
+++ b/UniVerse/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="settings">Settings</string>
     <string name="feed">Feed</string>
     <string name="schedule">Schedule</string>
+    <string name="create_event">Create Event</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
